Updates to section 3; tweaks for consistency with new workshop.

--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -1383,7 +1383,7 @@
    "source": [
     "## Working with the index\n",
     "\n",
-    "So far, we haven't really worked with the index because it's just been a row number; however, we can change the values we have in the index to access additional features of the `pandas` library."
+    "So far, we haven't really worked with the index because it's just been a row number; however, we can change the values we have in the index to access additional features of the pandas library."
    ]
   },
   {
@@ -1607,7 +1607,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: `taxis.sort_index(axis=1)` will sort the columns by name. The `axis` parameter is present throughout the `pandas` library: `axis=0` targets rows and `axis=1` targets columns.*"
+    "*Tip: `taxis.sort_index(axis=1)` will sort the columns by name. The `axis` parameter is present throughout the pandas library: `axis=0` targets rows and `axis=1` targets columns.*"
    ]
   },
   {
@@ -4612,7 +4612,7 @@
    "source": [
     "## Time series\n",
     "\n",
-    "When working with time series data, `pandas` provides us with additional functionality to not just compare the observations in our dataset, but to use their relationship in time to analyze the data. In this section, we will see a few such operations for selecting date/time ranges, calculating changes over time, performing window calculations, and resampling the data to different date/time intervals."
+    "When working with time series data, pandas provides us with additional functionality to not just compare the observations in our dataset, but to use their relationship in time to analyze the data. In this section, we will see a few such operations for selecting date/time ranges, calculating changes over time, performing window calculations, and resampling the data to different date/time intervals."
    ]
   },
   {
@@ -5958,7 +5958,7 @@
     "tags": []
    },
    "source": [
-    "To understand what's happening, it's best to visualize the original data and the result, so here's a sneak peek of plotting with `pandas`:"
+    "To understand what's happening, it's best to visualize the original data and the result, so here's a sneak peek of plotting with pandas:"
    ]
   },
   {
