--- a/asynchronous_lab/solutions.ipynb
+++ b/asynchronous_lab/solutions.ipynb
@@ -1493,7 +1493,7 @@
    "id": "2f860976-5d4e-497d-a6c5-d0bf19b53aee",
    "metadata": {},
    "source": [
-    "*Be sure to consult [this](https://opendatascience.com/how-to-pivot-and-plot-data-with-pandas/) blog post for additional examples of creating pivot tables using this dataset.*"
+    "*Be sure to consult [this](https://medium.com/@stefaniemolin/how-to-pivot-and-plot-data-with-pandas-9450939fcf8) blog post for additional examples of creating pivot tables using this dataset.*"
    ]
   }
  ],
