Adding additional resources; slide tweaks for formatting.

--- a/slides/1-getting_started_with_pandas.ipynb
+++ b/slides/1-getting_started_with_pandas.ipynb
@@ -2487,8 +2487,7 @@
      "data": {
       "text/plain": [
        "array(['L5', 'H6', 'EH4', 'Acapulcoite', 'L6', 'LL3-6', 'H5', 'L',\n",
-       "       'Diogenite-pm', 'Unknown', 'H4', 'H', 'Iron, IVA', 'CR2-an', 'LL5',\n",
-       "       'CI1', 'L/LL4', 'Eucrite-mmict', 'CV3', 'Ureilite-an'],\n",
+       "       'Diogenite-pm', 'Unknown', 'H4', 'H', 'Iron, IVA', 'CR2-an'],\n",
        "      dtype=object)"
       ]
      },
@@ -2498,7 +2497,7 @@
     }
    ],
    "source": [
-    "meteorites.recclass.unique()[:20]"
+    "meteorites.recclass.unique()[:14]"
    ]
   },
   {
@@ -2591,7 +2590,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Frontier Mountain 93033</td>\n",
+       "      <td>Yamato 792779</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Valid</td>\n",
        "      <td>L6</td>\n",
@@ -2711,31 +2710,31 @@
        "</div>"
       ],
       "text/plain": [
-       "                           name            id nametype recclass      mass (g)  \\\n",
-       "count                     45716  45716.000000    45716    45716  4.558500e+04   \n",
-       "unique                    45716           NaN        2      466           NaN   \n",
-       "top     Frontier Mountain 93033           NaN    Valid       L6           NaN   \n",
-       "freq                          1           NaN    45641     8285           NaN   \n",
-       "mean                        NaN  26889.735104      NaN      NaN  1.327808e+04   \n",
-       "std                         NaN  16860.683030      NaN      NaN  5.749889e+05   \n",
-       "min                         NaN      1.000000      NaN      NaN  0.000000e+00   \n",
-       "25%                         NaN  12688.750000      NaN      NaN  7.200000e+00   \n",
-       "50%                         NaN  24261.500000      NaN      NaN  3.260000e+01   \n",
-       "75%                         NaN  40656.750000      NaN      NaN  2.026000e+02   \n",
-       "max                         NaN  57458.000000      NaN      NaN  6.000000e+07   \n",
+       "                 name            id nametype recclass      mass (g)   fall  \\\n",
+       "count           45716  45716.000000    45716    45716  4.558500e+04  45716   \n",
+       "unique          45716           NaN        2      466           NaN      2   \n",
+       "top     Yamato 792779           NaN    Valid       L6           NaN  Found   \n",
+       "freq                1           NaN    45641     8285           NaN  44609   \n",
+       "mean              NaN  26889.735104      NaN      NaN  1.327808e+04    NaN   \n",
+       "std               NaN  16860.683030      NaN      NaN  5.749889e+05    NaN   \n",
+       "min               NaN      1.000000      NaN      NaN  0.000000e+00    NaN   \n",
+       "25%               NaN  12688.750000      NaN      NaN  7.200000e+00    NaN   \n",
+       "50%               NaN  24261.500000      NaN      NaN  3.260000e+01    NaN   \n",
+       "75%               NaN  40656.750000      NaN      NaN  2.026000e+02    NaN   \n",
+       "max               NaN  57458.000000      NaN      NaN  6.000000e+07    NaN   \n",
        "\n",
-       "         fall                    year        reclat       reclong GeoLocation  \n",
-       "count   45716                   45425  38401.000000  38401.000000       38401  \n",
-       "unique      2                     266           NaN           NaN       17100  \n",
-       "top     Found  01/01/2003 12:00:00 AM           NaN           NaN  (0.0, 0.0)  \n",
-       "freq    44609                    3323           NaN           NaN        6214  \n",
-       "mean      NaN                     NaN    -39.122580     61.074319         NaN  \n",
-       "std       NaN                     NaN     46.378511     80.647298         NaN  \n",
-       "min       NaN                     NaN    -87.366670   -165.433330         NaN  \n",
-       "25%       NaN                     NaN    -76.714240      0.000000         NaN  \n",
-       "50%       NaN                     NaN    -71.500000     35.666670         NaN  \n",
-       "75%       NaN                     NaN      0.000000    157.166670         NaN  \n",
-       "max       NaN                     NaN     81.166670    354.473330         NaN  "
+       "                          year        reclat       reclong GeoLocation  \n",
+       "count                    45425  38401.000000  38401.000000       38401  \n",
+       "unique                     266           NaN           NaN       17100  \n",
+       "top     01/01/2003 12:00:00 AM           NaN           NaN  (0.0, 0.0)  \n",
+       "freq                      3323           NaN           NaN        6214  \n",
+       "mean                       NaN    -39.122580     61.074319         NaN  \n",
+       "std                        NaN     46.378511     80.647298         NaN  \n",
+       "min                        NaN    -87.366670   -165.433330         NaN  \n",
+       "25%                        NaN    -76.714240      0.000000         NaN  \n",
+       "50%                        NaN    -71.500000     35.666670         NaN  \n",
+       "75%                        NaN      0.000000    157.166670         NaN  \n",
+       "max                        NaN     81.166670    354.473330         NaN  "
       ]
      },
      "execution_count": 29,
@@ -3241,7 +3240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3255,7 +3254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
