Update exercise 2.3 phrasing.

--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -6039,7 +6039,7 @@
     "\n",
     "1. Read in the meteorite data from the `Meteorite_Landings.csv` file.\n",
     "2. Rename the `mass (g)` column to `mass`, and drop all the latitude and longitude columns.\n",
-    "3. Update the `year` column to only contain the year, and create a new column indicating if the year is unknown. Hint: Use `year.str.slice()` to grab a substring.\n",
+    "3. Update the `year` column to only contain the year, convert it to a numeric data type, and create a new column indicating if the year is unknown. Hint: Use `year.str.slice()` to grab a substring.\n",
     "4. There's a data entry error in the `year` column. Can you find it? (Don't spend too much time on this.)\n",
     "5. Compare summary statistics of the `mass` column for the meteorites that were found versus observed falling.\n",
     "6. Create a pivot table that shows both the number of meteorites and the 95th percentile of meteorite mass for those that were found versus observed falling per year from 1990 to 2000 (inclusive).\n",
@@ -6205,7 +6205,7 @@
     "tags": []
    },
    "source": [
-    "##### 3. Update the `year` column to only contain the year, and create a new column indicating if the year is unknown."
+    "##### 3. Update the `year` column to only contain the year, convert it to a numeric data type, and create a new column indicating if the year is unknown."
    ]
   },
   {
