Add additional commentary on lambdas at first mention.

--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -811,6 +811,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d2cabea-d370-4ea9-951a-a22290fe182f",
+   "metadata": {},
+   "source": [
+    "*Tip: New to `lambda` functions? These small, anonymous functions can receive multiple arguments, but can only contain one expression (the return value). You will see these a lot in pandas code. Read more about them [here](https://realpython.com/python-lambda/).*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b0b2af8a-0727-4e08-a07d-64ddb73a71dd",
    "metadata": {
     "slideshow": {
