--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -835,6 +835,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c87ad15-a398-46a3-b0d6-d50312f9e5c3",
+   "metadata": {},
+   "source": [
+    "*Tip: New to `lambda` functions? These small, anonymous functions can receive multiple arguments, but can only contain one expression (the return value). You will see these a lot in pandas code. Read more about them [here](https://realpython.com/python-lambda/).*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "91d1480f-22ca-4092-9f9b-ef0b8fe92226",
    "metadata": {
     "slideshow": {
