--- a/notebooks/0-check_your_env.ipynb
+++ b/notebooks/0-check_your_env.ipynb
@@ -17,9 +17,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using Python in /home/stefaniemolin/pandas-workshop/pandas_workshop:\n",
-      "\u001b[42m[ OK ]\u001b[0m Python is version 3.7.3 (default, Dec 20 2019, 18:57:59) \n",
-      "[GCC 8.3.0]\n",
+      "Using Python in /Users/stefanie/miniconda3/envs/pandas_workshop:\n",
+      "\u001b[42m[ OK ]\u001b[0m Python is version 3.10.2 | packaged by conda-forge | (main, Mar  8 2022, 15:57:32) [Clang 11.1.0 ]\n",
       "\n",
       "\u001b[42m[ OK ]\u001b[0m jupyterlab\n",
       "\u001b[42m[ OK ]\u001b[0m matplotlib\n",
@@ -46,7 +45,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -60,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
