Update section 1 outputs.

--- a/slides/1-getting_started_with_pandas.ipynb
+++ b/slides/1-getting_started_with_pandas.ipynb
@@ -477,8 +477,8 @@
        "      <td>21</td>\n",
        "      <td>Fell</td>\n",
        "      <td>1880-01-01T00:00:00.000</td>\n",
-       "      <td>50.77500</td>\n",
-       "      <td>6.08333</td>\n",
+       "      <td>50.775000</td>\n",
+       "      <td>6.083330</td>\n",
        "      <td>{'latitude': '50.775', 'longitude': '6.08333'}</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -492,8 +492,8 @@
        "      <td>720</td>\n",
        "      <td>Fell</td>\n",
        "      <td>1951-01-01T00:00:00.000</td>\n",
-       "      <td>56.18333</td>\n",
-       "      <td>10.23333</td>\n",
+       "      <td>56.183330</td>\n",
+       "      <td>10.233330</td>\n",
        "      <td>{'latitude': '56.18333', 'longitude': '10.23333'}</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -507,8 +507,8 @@
        "      <td>107000</td>\n",
        "      <td>Fell</td>\n",
        "      <td>1952-01-01T00:00:00.000</td>\n",
-       "      <td>54.21667</td>\n",
-       "      <td>-113.00000</td>\n",
+       "      <td>54.216670</td>\n",
+       "      <td>-113.000000</td>\n",
        "      <td>{'latitude': '54.21667', 'longitude': '-113.0'}</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -523,10 +523,10 @@
        "1  Aarhus  2    Valid       H6     720  Fell  1951-01-01T00:00:00.000   \n",
        "2    Abee  6    Valid      EH4  107000  Fell  1952-01-01T00:00:00.000   \n",
        "\n",
-       "     reclat     reclong                                        geolocation  \\\n",
-       "0  50.77500     6.08333     {'latitude': '50.775', 'longitude': '6.08333'}   \n",
-       "1  56.18333    10.23333  {'latitude': '56.18333', 'longitude': '10.23333'}   \n",
-       "2  54.21667  -113.00000    {'latitude': '54.21667', 'longitude': '-113.0'}   \n",
+       "      reclat      reclong                                        geolocation  \\\n",
+       "0  50.775000     6.083330     {'latitude': '50.775', 'longitude': '6.08333'}   \n",
+       "1  56.183330    10.233330  {'latitude': '56.18333', 'longitude': '10.23333'}   \n",
+       "2  54.216670  -113.000000    {'latitude': '54.21667', 'longitude': '-113.0'}   \n",
        "\n",
        "  :@computed_region_cbhk_fwbd :@computed_region_nnqa_25f4  \n",
        "0                         NaN                         NaN  \n",
@@ -2396,7 +2396,7 @@
        "id                              11890\n",
        "nametype                        Valid\n",
        "recclass                    Iron, IVB\n",
-       "mass (g)               60000000.00000\n",
+       "mass (g)                   60000000.0\n",
        "fall                            Found\n",
        "year           01/01/1920 12:00:00 AM\n",
        "reclat                      -19.58333\n",
@@ -2426,7 +2426,7 @@
    "source": [
     "*Fun fact: This meteorite landed in Namibia and is a tourist attraction.*\n",
     "\n",
-    "<img width=\"150\" style=\"margin-top: -15px; margin-bottom: -8px\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Hoba_meteorite_%2815682150765%29.jpg/1280px-Hoba_meteorite_%2815682150765%29.jpg\" alt=\"Hoba meteorite (source: Wikipedia)\"/>\n",
+    "<img width=\"125\" style=\"margin-top: -15px; margin-bottom: -8px\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Hoba_meteorite_%2815682150765%29.jpg/1280px-Hoba_meteorite_%2815682150765%29.jpg\" alt=\"Hoba meteorite (source: Wikipedia)\"/>\n",
     "<div><small style=\"font-size: 10px\"><em>Source: Wikipedia</em></small></div>"
    ]
   },
@@ -2590,7 +2590,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Yamato 792779</td>\n",
+       "      <td>Aachen</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Valid</td>\n",
        "      <td>L6</td>\n",
@@ -2710,18 +2710,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                 name            id nametype recclass      mass (g)   fall  \\\n",
-       "count           45716  45716.000000    45716    45716  4.558500e+04  45716   \n",
-       "unique          45716           NaN        2      466           NaN      2   \n",
-       "top     Yamato 792779           NaN    Valid       L6           NaN  Found   \n",
-       "freq                1           NaN    45641     8285           NaN  44609   \n",
-       "mean              NaN  26889.735104      NaN      NaN  1.327808e+04    NaN   \n",
-       "std               NaN  16860.683030      NaN      NaN  5.749889e+05    NaN   \n",
-       "min               NaN      1.000000      NaN      NaN  0.000000e+00    NaN   \n",
-       "25%               NaN  12688.750000      NaN      NaN  7.200000e+00    NaN   \n",
-       "50%               NaN  24261.500000      NaN      NaN  3.260000e+01    NaN   \n",
-       "75%               NaN  40656.750000      NaN      NaN  2.026000e+02    NaN   \n",
-       "max               NaN  57458.000000      NaN      NaN  6.000000e+07    NaN   \n",
+       "          name            id nametype recclass      mass (g)   fall  \\\n",
+       "count    45716  45716.000000    45716    45716  4.558500e+04  45716   \n",
+       "unique   45716           NaN        2      466           NaN      2   \n",
+       "top     Aachen           NaN    Valid       L6           NaN  Found   \n",
+       "freq         1           NaN    45641     8285           NaN  44609   \n",
+       "mean       NaN  26889.735104      NaN      NaN  1.327808e+04    NaN   \n",
+       "std        NaN  16860.683030      NaN      NaN  5.749889e+05    NaN   \n",
+       "min        NaN      1.000000      NaN      NaN  0.000000e+00    NaN   \n",
+       "25%        NaN  12688.750000      NaN      NaN  7.200000e+00    NaN   \n",
+       "50%        NaN  24261.500000      NaN      NaN  3.260000e+01    NaN   \n",
+       "75%        NaN  40656.750000      NaN      NaN  2.026000e+02    NaN   \n",
+       "max        NaN  57458.000000      NaN      NaN  6.000000e+07    NaN   \n",
        "\n",
        "                          year        reclat       reclong GeoLocation  \n",
        "count                    45425  38401.000000  38401.000000       38401  \n",
@@ -3203,7 +3203,7 @@
     {
      "data": {
       "text/plain": [
-       "fare_amount     176.00\n",
+       "fare_amount      176.0\n",
        "tip_amount       18.29\n",
        "tolls_amount      6.12\n",
        "total_amount    201.21\n",
@@ -3254,7 +3254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
