--- a/slides/0-introduction.ipynb
+++ b/slides/0-introduction.ipynb
@@ -45,7 +45,7 @@
    },
    "source": [
     "### Prerequisites\n",
-    "Consult the [README](https://github.com/stefmolin/pandas-workshop) for environment setup instructions or use [this](https://mybinder.org/v2/gh/stefmolin/binder-environments/pandas_workshop?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Fstefmolin%252Fpandas-workshop%26urlpath%3Dlab%252Ftree%252Fpandas-workshop%252F%26branch%3Dmaster) Binder environment."
+    "Consult the [README](https://github.com/stefmolin/pandas-workshop) for environment setup instructions or use [this](https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab) Binder environment."
    ]
   },
   {
@@ -85,7 +85,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -99,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
