--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -2125,7 +2125,7 @@
    "source": [
     "## Calculating summary statistics\n",
     "\n",
-    "In the next section of this workshop, we will discuss data cleaning for a more meaningful analysis of these datasets; however, we can already extract some interesting insights from the `meteorites` data by calculating summary statistics."
+    "In the next section of this workshop, we will discuss data cleaning for a more meaningful analysis of our datasets; however, we can already extract some interesting insights from the `meteorites` data by calculating summary statistics."
    ]
   },
   {
