Update inline comments on melt example.

--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -2537,8 +2537,9 @@
    ],
    "source": [
     "tsa_melted = tsa.melt(\n",
-    "    id_vars='date', # uniquely identifies a row\n",
-    "    var_name='year', value_name='travelers'\n",
+    "    id_vars='date', # column that uniquely identifies a row (can be multiple)\n",
+    "    var_name='year', # name for the new column created by melting\n",
+    "    value_name='travelers' # name for new column containing values from melted columns\n",
     ")\n",
     "tsa_melted.sample(5, random_state=1) # show some random entries"
    ]
