Rephrase comment around dates with null values and add missing commas.

--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -2593,7 +2593,7 @@
     "tags": []
    },
    "source": [
-    "This leaves us with some null values (the dates that haven't yet occurred):"
+    "This leaves us with some null values (the dates that aren't present in the dataset):"
    ]
   },
   {
@@ -2900,7 +2900,7 @@
     "tags": []
    },
    "source": [
-    "**Important**: We aren't covering the `unstack()` and `stack()` methods, which are additional ways to pivot and melt, respectively. These come in handy when we have a multi-level index (e.g. if we ran `set_index()` with more than one column). More information can be found [here](https://pandas.pydata.org/pandas-docs/stable/user_guide/reshaping.html)."
+    "**Important**: We aren't covering the `unstack()` and `stack()` methods, which are additional ways to pivot and melt, respectively. These come in handy when we have a multi-level index (e.g., if we ran `set_index()` with more than one column). More information can be found [here](https://pandas.pydata.org/pandas-docs/stable/user_guide/reshaping.html)."
    ]
   },
   {
@@ -3273,7 +3273,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: There are many parameters for this method so be sure to check out the [documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html). To append rows, take a look at `append()` and `pd.concat()`.*"
+    "*Tip: There are many parameters for this method, so be sure to check out the [documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html). To append rows, take a look at `append()` and `pd.concat()`.*"
    ]
   },
   {
