Edits to time series section and exercise phrasing.

--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -3792,7 +3792,7 @@
     "tags": []
    },
    "source": [
-    "Let's make one last pivot table with column and row subtotals along with some formatting improvements. First, we set a display option for all floats:"
+    "Let's make one last pivot table with column and row subtotals, along with some formatting improvements. First, we set a display option for all floats:"
    ]
   },
   {
@@ -4587,7 +4587,7 @@
     "We are only scratching the surface; some additional functionalities to be aware of include the following:\n",
     "- We can group by multiple columns &ndash; this creates a hierarchical index.\n",
     "- Groups can be excluded from calculations with the `filter()` method.\n",
-    "- We can group on content in the index using the `level` or `name` parameters e.g. `groupby(level=0)` or `groupby(name='year')`.\n",
+    "- We can group on content in the index using the `level` or `name` parameters e.g., `groupby(level=0)` or `groupby(name='year')`.\n",
     "- We can group by date ranges if we use a `pd.Grouper()` object."
    ]
   },
@@ -5192,7 +5192,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: The `at_time()` method can be used to extract all entries at a given time (e.g. 12:35:27).*"
+    "*Tip: The `at_time()` method can be used to extract all entries at a given time (e.g., 12:35:27).*"
    ]
   },
   {
@@ -5792,7 +5792,7 @@
    "source": [
     "### Window calculations\n",
     "\n",
-    "Window calculations are similar to group by calculations except the group over which the calculation is performed isn't static &ndash; it can move or expand. Pandas provides functionality for constructing a variety of windows, including moving/rolling windows, expanding windows (e.g. cumulative sum or mean up to the current date in a time series), and exponentially weighted moving windows (to weight closer observations higher than further ones). We will only look at rolling and expanding calculations here."
+    "Window calculations are similar to group by calculations except the group over which the calculation is performed isn't static &ndash; it can move or expand. Pandas provides functionality for constructing a variety of windows, including moving/rolling windows, expanding windows (e.g., cumulative sum or mean up to the current date in a time series), and exponentially weighted moving windows (to weight closer observations more than further ones). We will only look at rolling and expanding calculations here."
    ]
   },
   {
@@ -5821,7 +5821,7 @@
     "tags": []
    },
    "source": [
-    "Performing a window calculation is very similar to a group by calculation: we first define the window, and then we specify the aggregation:"
+    "Performing a window calculation is very similar to a group by calculation &ndash; we first define the window, and then we specify the aggregation:"
    ]
   },
   {
@@ -6063,10 +6063,10 @@
     "\n",
     "1. Read in the meteorite data from the `Meteorite_Landings.csv` file.\n",
     "2. Rename the `mass (g)` column to `mass`, and drop all the latitude and longitude columns.\n",
-    "3. Update the `year` column to only contain the year, convert it to a numeric data type, and create a new column indicating if the year is unknown. Hint: Use `year.str.slice()` to grab a substring.\n",
+    "3. Update the `year` column to only contain the year, convert it to a numeric data type, and create a new column indicating whether the year is unknown. Hint: Use `year.str.slice()` to grab a substring.\n",
     "4. There's a data entry error in the `year` column. Can you find it? (Don't spend too much time on this.)\n",
     "5. Compare summary statistics of the `mass` column for the meteorites that were found versus observed falling.\n",
-    "6. Create a pivot table that shows both the number of meteorites and the 95th percentile of meteorite mass for those that were found versus observed falling per year from 1990 to 2000 (inclusive).\n",
+    "6. Create a pivot table that shows both the number of meteorites and the 95th percentile of meteorite mass for those that were found versus observed falling per year from 1990 through 2000 (inclusive).\n",
     "7. Using the `taxis` data from earlier this section, resample the data to an hourly frequency based on the dropoff time. Calculate the total `trip_distance`, `fare_amount`, `tolls_amount`, and `tip_amount`, then find the 5 hours with the most tips."
    ]
   },
@@ -6229,7 +6229,7 @@
     "tags": []
    },
    "source": [
-    "##### 3. Update the `year` column to only contain the year, convert it to a numeric data type, and create a new column indicating if the year is unknown."
+    "##### 3. Update the `year` column to only contain the year, convert it to a numeric data type, and create a new column indicating whether the year is unknown."
    ]
   },
   {
@@ -6603,7 +6603,7 @@
     "tags": []
    },
    "source": [
-    "##### 6. Create a pivot table that shows both the number of meteorites and the 95th percentile of meteorite mass for those that were found versus observed falling per year from 1990 to 2000 (inclusive)."
+    "##### 6. Create a pivot table that shows both the number of meteorites and the 95th percentile of meteorite mass for those that were found versus observed falling per year from 1990 through 2000 (inclusive)."
    ]
   },
   {
