Tweaks to section 3 content.

--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -232,7 +232,7 @@
     "tags": []
    },
    "source": [
-    "The `plot()` method returns an `Axes` object that can be modified further (e.g. to add reference lines, annotations, labels, etc.). Let's walk through an example."
+    "The `plot()` method returns an `Axes` object that can be modified further (e.g., to add reference lines, annotations, labels, etc.). Let's walk through an example."
    ]
   },
   {
@@ -367,7 +367,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x134ccffa0>"
+       "<matplotlib.legend.Legend at 0x104f8fe80>"
       ]
      },
      "execution_count": 5,
@@ -502,7 +502,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: If you're new to `zip()`, check out [this](https://realpython.com/python-zip-function/) article.*"
+    "*Tip: If you're new to the `zip()` function, check out [this](https://realpython.com/python-zip-function/) article.*"
    ]
   },
   {
@@ -544,7 +544,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x134c1e650>"
+       "<seaborn.axisgrid.FacetGrid at 0x10f55bf70>"
       ]
      },
      "execution_count": 8,
@@ -567,7 +567,7 @@
    "source": [
     "import seaborn as sns\n",
     "\n",
-    "sns.displot(data=tsa_melted_holiday_travel, x='travelers', kde=True, col='year')"
+    "sns.displot(data=tsa_melted_holiday_travel, x='travelers', col='year', kde=True)"
    ]
   },
   {
@@ -581,7 +581,7 @@
    },
    "source": [
     "### Heatmaps\n",
-    "We can use Seaborn to visualize pivot tables as heatmaps:"
+    "We can also use Seaborn to visualize pivot tables as heatmaps:"
    ]
   },
   {
@@ -789,7 +789,7 @@
    },
    "source": [
     "Some things to keep in mind: \n",
-    "- We used `Axes` methods to customize our plots (i.e., an object-oriented approach), but the `pyplot` module provides equivalent functions (i.e., a functional approach) for adding shaded regions, reference lines, annotations, etc. &ndash; although the function names might be slightly different than their `Axes` method counterparts (e.g. `Axes.set_xlabel()` vs. `plt.xlabel()`). \n",
+    "- We used `Axes` methods to customize our plots (i.e., an object-oriented approach), but the `pyplot` module provides equivalent functions (i.e., a functional approach) for adding shaded regions, reference lines, annotations, etc. &ndash; although the function names might be slightly different than their `Axes` method counterparts (e.g., `Axes.set_xlabel()` vs. `plt.xlabel()`). \n",
     "- In general, try to stick to either the object-oriented or functional approach rather than mixing the two. However, be careful when working with subplots &ndash; `pyplot` functions will only affect the last subplot.\n",
     "- The [anatomy of a figure](https://matplotlib.org/stable/gallery/showcase/anatomy.html) diagram in the Matplotlib documentation is a great resource for identifying which objects you will need to access for plot customizations."
    ]
@@ -859,7 +859,7 @@
     "tags": []
    },
    "source": [
-    "##### 2. Using Seaborn, create a heatmap that shows the 2019 TSA median traveler throughput by day of week and month."
+    "##### 2. Using Seaborn, create a heatmap that shows the 2019 TSA median traveler throughput by day of week and month. Hint: Make a pivot table first."
    ]
   },
   {
