--- a/slides/3-data_visualization.ipynb
+++ b/slides/3-data_visualization.ipynb
@@ -254,7 +254,7 @@
     "tags": []
    },
    "source": [
-    "The `plot()` method returns an `Axes` object that can be modified further (e.g. to add reference lines, annotations, labels, etc.). Let's walk through an example."
+    "The `plot()` method returns an `Axes` object that can be modified further (e.g., to add reference lines, annotations, labels, etc.). Let's walk through an example."
    ]
   },
   {
@@ -389,7 +389,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12f963f70>"
+       "<matplotlib.legend.Legend at 0x124024070>"
       ]
      },
      "execution_count": 5,
@@ -524,7 +524,7 @@
     "tags": []
    },
    "source": [
-    "*Tip: If you're new to `zip()`, check out [this](https://realpython.com/python-zip-function/) article.*"
+    "*Tip: If you're new to the `zip()` function, check out [this](https://realpython.com/python-zip-function/) article.*"
    ]
   },
   {
@@ -583,7 +583,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x12f7ebee0>"
+       "<seaborn.axisgrid.FacetGrid at 0x1240b4fd0>"
       ]
      },
      "execution_count": 8,
@@ -606,7 +606,7 @@
    "source": [
     "import seaborn as sns\n",
     "\n",
-    "sns.displot(data=tsa_melted_holiday_travel, x='travelers', kde=True, col='year')"
+    "sns.displot(data=tsa_melted_holiday_travel, x='travelers', col='year', kde=True)"
    ]
   },
   {
@@ -620,7 +620,7 @@
    },
    "source": [
     "### Heatmaps\n",
-    "We can use Seaborn to visualize pivot tables as heatmaps:"
+    "We can also use Seaborn to visualize pivot tables as heatmaps:"
    ]
   },
   {
@@ -835,7 +835,7 @@
    },
    "source": [
     "Some things to keep in mind: \n",
-    "- We used `Axes` methods to customize our plots (i.e., an object-oriented approach), but the `pyplot` module provides equivalent functions (i.e., a functional approach) for adding shaded regions, reference lines, annotations, etc. &ndash; although the function names might be slightly different than their `Axes` method counterparts (e.g. `Axes.set_xlabel()` vs. `plt.xlabel()`). \n",
+    "- We used `Axes` methods to customize our plots (i.e., an object-oriented approach), but the `pyplot` module provides equivalent functions (i.e., a functional approach) for adding shaded regions, reference lines, annotations, etc. &ndash; although the function names might be slightly different than their `Axes` method counterparts (e.g., `Axes.set_xlabel()` vs. `plt.xlabel()`). \n",
     "- In general, try to stick to either the object-oriented or functional approach rather than mixing the two. However, be careful when working with subplots &ndash; `pyplot` functions will only affect the last subplot.\n",
     "- The [anatomy of a figure](https://matplotlib.org/stable/gallery/showcase/anatomy.html) diagram in the Matplotlib documentation is a great resource for identifying which objects you will need to access for plot customizations."
    ]
@@ -964,7 +964,7 @@
     "\n",
     "ax = sns.heatmap(data=data / 1e6, annot=True, fmt='.1f', cmap='Blues')\n",
     "ax.set_xticklabels(calendar.month_abbr[1:])\n",
-    "ax.set_yticklabels(calendar.day_abbr[:], rotation=0)\n",
+    "ax.set_yticklabels(calendar.day_abbr, rotation=0)\n",
     "ax.set_title('2019 TSA Median Traveler Throughput\\n(in millions)')"
    ]
   },
