Add mention to pd.qcut() in crosstab example.

--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -3912,7 +3912,7 @@
    },
    "source": [
     "### Crosstabs\n",
-    "The `pd.crosstab()` function provides an easy way to create a frequency table:"
+    "The `pd.crosstab()` function provides an easy way to create a frequency table. Here, we count the number of low-, medium-, and high-volume travel days per year, using the `pd.cut()` function to create three travel volume bins of equal width:"
    ]
   },
   {
@@ -4002,7 +4002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb00efed-de93-4adf-92b2-4d88ae07565e",
+   "id": "7aceb604-c3e9-4b1a-b62d-ada3f86ad897",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4010,7 +4010,20 @@
     "tags": []
    },
    "source": [
-    "*Tip: The `pd.crosstab()` function supports other aggregations provided you pass in the data to aggregate as `values` and specify the aggregation with `aggfunc`. You can also add subtotals and normalize the data. See the [documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.crosstab.html) for more information.*"
+    "*Tip: The `pd.cut()` function can also be used to specify custom bin ranges. For equal-sized bins based on quantiles, use the `pd.qcut()` function instead.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb00efed-de93-4adf-92b2-4d88ae07565e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "Note that the `pd.crosstab()` function supports other aggregations provided you pass in the data to aggregate as `values` and specify the aggregation with `aggfunc`. You can also add subtotals and normalize the data. See the [documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.crosstab.html) for more information."
    ]
   },
   {
