--- a/slides/2-data_wrangling.ipynb
+++ b/slides/2-data_wrangling.ipynb
@@ -3993,7 +3993,7 @@
    },
    "source": [
     "### Crosstabs\n",
-    "The `pd.crosstab()` function provides an easy way to create a frequency table:"
+    "The `pd.crosstab()` function provides an easy way to create a frequency table. Here, we count the number of low-, medium-, and high-volume travel days per year, using the `pd.cut()` function to create three travel volume bins of equal width:"
    ]
   },
   {
@@ -4083,7 +4083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "900cb77c-7003-4472-a4b4-f0381cf86a57",
+   "id": "f8628adb-7101-48ff-8c61-ad785eaa8e7b",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4091,7 +4091,20 @@
     "tags": []
    },
    "source": [
-    "*Tip: The `pd.crosstab()` function supports other aggregations provided you pass in the data to aggregate as `values` and specify the aggregation with `aggfunc`. You can also add subtotals and normalize the data. See the [documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.crosstab.html) for more information.*"
+    "*Tip: The `pd.cut()` function can also be used to specify custom bin ranges. For equal-sized bins based on quantiles, use the `pd.qcut()` function instead.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "900cb77c-7003-4472-a4b4-f0381cf86a57",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "Note that the `pd.crosstab()` function supports other aggregations provided you pass in the data to aggregate as `values` and specify the aggregation with `aggfunc`. You can also add subtotals and normalize the data. See the [documentation](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.crosstab.html) for more information."
    ]
   },
   {
