Update exercise intros.

--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -2679,7 +2679,7 @@
    "source": [
     "## Up Next: Data Wrangling\n",
     "\n",
-    "Let's take a 10-minute break for some exercises to check your understanding:\n",
+    "Let's take a break for some exercises to check your understanding:\n",
     "\n",
     "1. Create a DataFrame by reading in the `2019_Yellow_Taxi_Trip_Data.csv` file.\n",
     "2. Find the dimensions (number of rows and number of columns) in the data.\n",
