--- a/notebooks/2-data_wrangling.ipynb
+++ b/notebooks/2-data_wrangling.ipynb
@@ -5956,7 +5956,7 @@
    "source": [
     "## Up Next: Data Visualization\n",
     "\n",
-    "Let's take a 25-minute break for some exercises to check your understanding:\n",
+    "Let's take a break for some exercises to check your understanding:\n",
     "\n",
     "1. Read in the meteorite data from the `Meteorite_Landings.csv` file.\n",
     "2. Rename the `mass (g)` column to `mass`, and drop all the latitude and longitude columns.\n",
