--- a/notebooks/3-data_visualization.ipynb
+++ b/notebooks/3-data_visualization.ipynb
@@ -819,7 +819,7 @@
    "source": [
     "## Up Next: Hands-On Data Analysis Lab\n",
     "\n",
-    "Let's take a 15-minute break for some exercises to check your understanding:\n",
+    "Let's take a break for some exercises to check your understanding:\n",
     "\n",
     "1. Create box plots of TSA traveler throughput for each year in the data. Hint: Pass `kind='box'` into the `plot()` method to generate box plots.\n",
     "2. Using Seaborn, create a heatmap that shows the 2019 TSA median traveler throughput by day of week and month. Hint: Make a pivot table first.\n",
